# LagLens

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/laglens/: app.py  config.py  latency_stats.py  logger.py  main.py  ping.py  server_manager.py  servers.py  statistics.py  ui_updater.py  world_map.py
src/laglens/config/: config.py  laglens.tcss  servers.py  textual_config.py
src/laglens/ui/: __init__.py  forms.py
src/tests/: test_ping.py
tests/: test_ping.py
